--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,36 +22,12 @@
 <body>
     
   <div id="wrapper">
-        <img id="help1" class="hide" src="images/overhelp.png" alt="help1" style="display:none"/>
-    <div id="search">
-      
-    </div>
-    <div id="tab">
-        <a id="home" href="#" title="Home"><img src="images/tab/home.png" alt="Home"/></a>
-        <a id="votw" href="votw.html" title="Video Of The Week"><img src="images/tab/votw.png" alt="VOTW"/></a>
-        <a id="help" href="#" title="How It Works" data-image1="help1" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';"><img src="images/tab/help.png" alt="Help"/></a>
-        <a id="about" href="about.html" title="About"><img src="images/tab/about.png" alt="About"/></a>
-    </div>
 
     <div id="header">
         
           <h3>The Eternal Archive.</h3>
                 <div class="fadein">
                 <img src="https://ununsplash.imgix.net/33/hBd6EPoQT2C8VQYv65ys_White%20Sands.jpg?q=75&amp;fm=jpg&amp;s=440edea0dacbf61ee20f8ff106573fb3" alt="Cover 1"/>
-                <img src="https://unsplash.imgix.net/reserve/OQx70jjBSLOMI5ackhxm_urbex-ppc-030.jpg?q=75&amp;fm=jpg&amp;s=a0a7ff653fa7e21c2dd006f75933c778" alt="Cover 2"/>
-                <img src="https://ununsplash.imgix.net/uploads/141223808515744db9995/3361b5e1?q=75&amp;fm=jpg&amp;s=04607c34357b70db74394f2fd8a6db7f" alt="Cover 3"/>
-                <img src="https://unsplash.imgix.net/uploads/14129863345840df499fc/0165574c?q=75&amp;fm=jpg&amp;s=6e5127e797feb9b5a72f7ae4a0f3a89b" alt="Cover 4"/>
-                <img src="https://ununsplash.imgix.net/reserve/wPCyys8TPCHY3GXm2N2D_ssp_inthewoods_1.jpg?q=75&amp;fm=jpg&amp;s=3b3d9ee14e903890db2ebe5962a8b72f" alt="Cover 5"/>
-                <img src="https://unsplash.imgix.net/reserve/vof4H8A1S02iWcK6mSAd_sarahmachtsachen.com_TheBeach.jpg?q=75&amp;fm=jpg&amp;s=992e28f0751267625026c5a18b66953c" alt="Cover 6"/> 
-                <img src="https://unsplash.imgix.net/reserve/NxxLccbqQdGtNc7xJ43e_ancestral-home.jpg?q=75&amp;fm=jpg&amp;s=f20accdc67997ab19731ec0faa5ea1e7" alt="Cover 7"/>
-                <img src="https://unsplash.imgix.net/41/pHyYeNZMRFOIRpYeW7X3_manacloseup%20copy.jpg?q=75&amp;fm=jpg&amp;s=0a6620cdcbc6576e17752c7c6cd108b6" alt="Cover 8"/>
-                <img src="https://ununsplash.imgix.net/photo-1414849424631-8b18529a81ca?q=75&amp;fm=jpg&amp;s=0e993004a2f3704e8f2ad5469315ccb7" alt="Cover 9"/>
-                <img src="https://unsplash.imgix.net/reserve/oIpwxeeSPy1cnwYpqJ1w_Dufer%20Collateral%20test.jpg?q=75&amp;fm=jpg&amp;s=d8cce13e5d977aeec5bdbec256987adf" alt="Cover 10"/>
-                <img src="https://unsplash.imgix.net/16/unsplash_525b54bcc32ba_1.JPG?q=75&amp;fm=jpg&amp;s=018e2501064e7cc8f7cb49ca5a2e4c0b" alt="Cover 11"/>
-                <img src="https://unsplash.imgix.net/photo-1418226970361-9f1f7227d638?q=75&amp;fm=jpg&amp;s=4a5f190c7499eff6f7c77d88d8abf57e" alt="Cover 12"/>
-                <img src="https://ununsplash.imgix.net/uploads/141202616623001715bb7/c1b3b9b0?q=75&amp;fm=jpg&amp;s=07faf9fb6409579bda59881970b284d1" alt="Cover 13"/>
-                <img src="https://unsplash.imgix.net/reserve/O7A9fAvYSXC7NTdz8gLQ_IMGP1039.jpg?q=75&amp;fm=jpg &amp;s=1c8ca9d98820d104e2ea7da571698ffd" alt="Cover 14"/>
-                <img src="https://ununsplash.imgix.net/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?q=75&amp;fm=jpg&amp;s=885ca6be349e07eacd820b8f585c355f"alt="Cover 15"/>
               </div>
           
       <center><nav>
@@ -117,8 +93,9 @@
     </div>
 
 
-
+	  <div id="contentBox">
       <%= yield %>
+      </div>
       
     <div id="footer"> 
       <h6 id="conserv">Conservatory Party &#174; </h6>
@@ -133,9 +110,6 @@
 
 
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="java/jquery.sleepyHead.js"></script>
-<script src="java/random.js"></script>
-<script src="java/shuffle.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -149,87 +123,11 @@
 </script>
 
 <script>
-  $(window).on('beforeunload', function() {
-      $(window).scrollTop(0);
-  });
-
-</script>
-
-<script>
-  $(document).ready(function() {
-    $('iframe').sleepyHead();
-    $('img').sleepyHead();
-  });
-</script>
-
-<script>
-  $(document).ready(function() {
-    $("#mostrecent").click(function() {
-     $("#contentBox").load("index.html #contentBox", function() {
-        $('iframe').sleepyHead();
-        $('img').sleepyHead();
-          $(window).trigger('scroll');
-    })
-    })
-  });
-</script>
-
-<script>
-$(function () {
-            $('div.fadein img').shuffle();
-        });
-</script>
-
-
-<script>  
-  $(document).ready(function() {
-      $('#randomize').click(function() {
-        $("#contentBox").load("index.html #contentBox", function() {    
-          randomizeContent('group1');
-           $(function() {
-            $('iframe').sleepyHead();
-            $('img').sleepyHead();
-            $(window).trigger('scroll');
-                        })
-          })
-        })    
-      })  ; 
-</script> 
-
-
-<script>
-  $(function(){
-      $('.fadein img:gt(0)').hide();
-         setInterval(function(){
-            $('.fadein :first-child').fadeOut(2000, function(){
-              $(this).next('img').fadeIn(2000)
-              .end().appendTo('.fadein');
-              }
-            )}, 
-          30000);
-  })
-</script>
-
-<script>
  $("#overlay").click(function(){
   $("#overlay").hide();
   $(".video")[0].src += "&autoplay=1";
   $(this).unbind("click");//or some other way to make sure that this only happens once
  });
-</script>
-
-<script>
-$(document).ready(function() {
-$(".hide").hide();
-$('#help').hover(function() {
-var img = '#'+$(this).data('image1');
-    $(img).show();
-}, function() {
-    var img = '#'+$(this).data('image1');
-     $(img).hide();
-} ); 
-
-});
 </script>
 
 </body>
