--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,19 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :source %><br>
-    <%= f.text_field :source %>
-  </div>
-  <div class="field">
+  <div class="add_url">
     <%= f.label :url %><br>
     <%= f.text_field :url %>
   </div>
-  <div class="field">
+  <div class="add_desc">
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
-  <div class="actions">
+  <div class="add_actions">
     <%= f.submit %>
   </div>
 <% end %>
