saving posts.scss file

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,15 +11,18 @@
     </div>
   <% end %>
 
-  <div class="add_url">
+<div class="container">
+  <div class="add-url">
     <%= f.label :url %><br>
     <%= f.text_field :url %>
   </div>
-  <div class="add_desc">
+  <div class="add-desc">
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
-  <div class="add_actions">
+  <div class="add-actions">
     <%= f.submit %>
   </div>
+</div>
+
 <% end %>
