--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,38 +93,24 @@
     </div>
 
 
-	  <div id="contentBox">
+	
       <%= yield %>
-      </div>
+      
       
     <div id="footer"> 
-      <h6 id="conserv">Conservatory Party &#174; </h6>
       <a href="footer/copyrightpolicy.html" id="copyright"> Copyright Policy </a>       
     </div>
 
-    </div>
+  </div>
 
 
 
 <!-- - - - - - - - -  - - - - - - - - - - - - - - java - - - - - - - - - - - - - - - - - - - - - - - - -->    
-
-
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-61689013-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-<script>
- $("#overlay").click(function(){
-  $("#overlay").hide();
+ $(".overlay").click(function(){
+  $(".overlay").hide();
   $(".video")[0].src += "&autoplay=1";
   $(this).unbind("click");//or some other way to make sure that this only happens once
  });
@@ -135,4 +121,3 @@
 
 
 
-  
