--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,4 +2,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+<div class="back-container">
+<br>
+<%= link_to 'Back', posts_path, class: 'new-back' %>
+<br>
+</div>
