--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,9 @@
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
+   <div class="field">
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+  </div>
   <div class="add-actions">
     <%= f.submit %>
   </div>
