update form for new post

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -339,7 +339,9 @@ span {
   border-radius: 10px;
   width: 600px;
   height: 200px;
-  line-height: 1rem;
+  line-height: 1.5rem;
+  font-size: 1.5rem;
+  color:orange;
   padding: 1px 10px;
 }
 
@@ -355,6 +357,7 @@ span {
   font-weight: bold;
   font-size: 1.2rem;
 }
+
 
 .add-container {
   text-align: center;
