--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,6 +88,11 @@
                          return false;">
                          Randomise</a></li>
                 <li><%= link_to 'New Post' , new_post_path , class: 'new-post' %></li>
+                      <% if user_signed_in? %>
+                          <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'new-post'  %></li>        
+                      <% else %>
+                          <li><%= link_to 'Login', new_user_session_path, class: 'new-post'  %> </li>
+                      <% end %>
             </ul>
         </div>             
     </div>
