css changes and adding link to home function

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
     <div id="header">
         
-          <h3>The Eternal Archive.</h3>
+          <h3><%= link_to 'The Eternal Archive.', root_path %></h3>
                 <div class="fadein">
                 <img src="https://ununsplash.imgix.net/33/hBd6EPoQT2C8VQYv65ys_White%20Sands.jpg?q=75&amp;fm=jpg&amp;s=440edea0dacbf61ee20f8ff106573fb3" alt="Cover 1"/>
               </div>
